--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@nextui-org/dropdown": "^2.3.7",
     "@types/react-router-dom": "^5.3.3",
     "html5-qrcode": "^2.3.8",
+    "i18next": "^24.1.2",
+    "i18next-http-backend": "^1.0.10",
     "jsqr": "^1.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.2.0",
     "react-router": "^7.0.1",
     "react-router-dom": "^7.0.2"
   },
