--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@nextui-org/dropdown": "^2.3.7",
+    "@nextui-org/system": "^2.4.4",
+    "@nextui-org/theme": "^2.4.3",
+    "@nextui-org/tooltip": "^2.2.5",
     "@types/react-router-dom": "^5.3.3",
+    "framer-motion": "^11.15.0",
     "html5-qrcode": "^2.3.8",
     "i18next": "^24.1.2",
     "i18next-http-backend": "^1.0.10",
