--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@nextui-org/dropdown": "^2.3.7",
+    "@nextui-org/modal": "^2.2.5",
     "@nextui-org/system": "^2.4.4",
     "@nextui-org/theme": "^2.4.3",
     "@nextui-org/tooltip": "^2.2.5",
